AWE/src/objects/RuleCriteria__c.object
<CustomObject>
    <description>Object to hold the rule criteria for a rule</description>
    <fields>
        <fullName>CrossFormula__c</fullName>
        <label>Cross Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluate_ChildCriteria_Using__c</fullName>
        <label>Evaluate Child Criteria Using</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluate_Criteria_Result_To__c</fullName>
        <label>Evaluate Criteria Result To</label>
        <picklist>
            <picklistValues>
                <fullName>True - If no child record found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False - If no child record found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <defaultValue>&quot;&lt;auto-detect&gt;&quot;</defaultValue>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Relation__c</fullName>
        <formula>IF(CONTAINS(Field_API_Name__c, &apos;[].&apos;), &apos;Related List&apos;, IF(CONTAINS(Field_API_Name__c, &apos;.&apos;), &apos;Lookup&apos;, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Relation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GlobalVariable__c</fullName>
        <label>Global Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Type__c</fullName>
        <label>Matching Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Equal To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starts With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ends With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Or Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Or Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Includes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excludes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Expression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IsChanged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Value__c</fullName>
        <label>Matching Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Value__c</fullName>
        <label>Maximum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RuleObjectType__c</fullName>
        <formula>Rule__r.Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Rule Criteria</relationshipLabel>
        <relationshipName>Rule_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rule Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Evaluate_Criteria_Result_To__c</columns>
        <columns>NAME</columns>
        <columns>Rule__c</columns>
        <columns>Field_Relation__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Matching_Type__c</columns>
        <columns>CrossFormula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Criteria #{0000}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cross_Formula_Required</fullName>
        <active>true</active>
        <description>CrossFormula is required if  field selected is cross formula</description>
        <errorConditionFormula>AND( CONTAINS ( Field_API_Name__c , &apos;CrossFormula&apos;), ISBLANK( CrossFormula__c ))</errorConditionFormula>
        <errorMessage>Cross formula needs to be defined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Matching_Value_Is_Required</fullName>
        <active>true</active>
        <description>Matching Value should be a required field for all operators except the operator &quot;Between&quot;</description>
        <errorConditionFormula>AND(Not(ISBLANK(TEXT(Matching_Type__c))),Not(ISPICKVAL(Matching_Type__c , &apos;Between&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;Not Between&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;Is Null&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;Is Not Null&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;IsChanged&apos;)), ISBLANK(Matching_Value__c))</errorConditionFormula>
        <errorMessage>Please enter a matching value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Value_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Matching_Type__c , &apos;Between&apos;),ISPICKVAL(Matching_Type__c , &apos;Not Between&apos;)), ISBLANK(Maximum_Value__c))</errorConditionFormula>
        <errorDisplayField>Maximum_Value__c</errorDisplayField>
        <errorMessage>When the Operator is Between, the Maximum Value field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Value_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Matching_Type__c , &apos;Between&apos;),ISPICKVAL(Matching_Type__c , &apos;Not Between&apos;)), ISBLANK(Minimum_Value__c))</errorConditionFormula>
        <errorDisplayField>Minimum_Value__c</errorDisplayField>
        <errorMessage>When the Operator is Between, the Minimum Value field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Operator_Is_Required</fullName>
        <active>true</active>
        <description>Operator is required field</description>
        <errorConditionFormula>ISBLANK( TEXT(Matching_Type__c) )</errorConditionFormula>
        <errorMessage>Operator value is required</errorMessage>
    </validationRules>
</CustomObject>